# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  27 Feb 2005; Jason Stubbs <jstubbs@gentoo.org> bin/emerge pym/ebuild.py:
  Fixed a couple of syntax errors.

  26 Feb 2005; Jason Stubbs <jstubbs@gentoo.org> src/chflags/*: Added
  spb's bsd chflags support.

  26 Feb 2005; Jason Stubbs <jstubbs@gentoo.org> cnf/*: Brought forward
  changes from portage_2_0.

  26 Feb 2005; Jason Stubbs <jstubbs@gentoo.org> pym/*: Brought forward
  changes from portage_2_0.

  26 Feb 2005; Jason Stubbs <jstubbs@gentoo.org> bin/*: Brought forward
  changes from portage_2_0. Repoman is broken until pym/* is updated.

  25 Feb 2005; Brian Harring <ferringb@gentoo.org> pym/portage.py: 
  yanked PORTAGE_TMPFS support, no longer relevant since data is fed 
  back via daemon pipes, not via file on disk.

  24 Feb 2005; <solar@gentoo.org> bin/ebuild-default-functions.sh:
  - added manifest_files to USER_CONFIG_PATH+/manifest_excludes. The way it
  works is to add a file to /etc/portage/manifest_files and this file will be
  ignore when checking the Manifest. This is mainly only useful when you
  rsync_exclude a file thats list in the Manifest. (embedded)

  21 Feb 2005; Marius Mauch <genone@gentoo.org> bin/isolated-functions.sh,
  cnf/make.conf, cnf/make.conf.alpha, cnf/make.conf.amd64,
  cnf/make.conf.arm, cnf/make.conf.hppa, cnf/make.conf.ia64,
  cnf/make.conf.mips, cnf/make.conf.ppc, cnf/make.conf.ppc64,
  cnf/make.conf.s390, cnf/make.conf.sh, cnf/make.conf.sparc,
  cnf/make.conf.x86, pym/ebuild.py, pym/portage.py, pym/portage_const.py,
  +pym/elog_modules/__init__.py, +pym/elog_modules/mod_custom.py,
  +pym/elog_modules/mod_mail.py, +pym/elog_modules/mod_save.py,