@@ -7,6 +7,12 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  02 Mar 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_util.py: Added
+  missing bsd_chflags import required after forward porting.
+
+  02 Mar 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py: Added -* to
+  FEATURES before saving back to the env after modification.
+
   27 Feb 2005; Jason Stubbs <jstubbs@gentoo.org> bin/emerge pym/ebuild.py:
   Fixed a couple of syntax errors.
 
